# haskell-prefixed-uid

./: LICENSE  README.md  hs-uid.cabal
src/: Main.hs
