name:                hs-uid
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leeor/hs-uid#readme
license:             BSD3
license-file:        LICENSE
author:              Leeor Aharon
maintainer:          leeor.aharon@gmail.com
copyright:           Copyright © 2021 Leeor Aharon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-uid
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , time
                     , optparse-applicative
                     , mtl
